// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at https://mozilla.org/MPL/2.0/.

syntax = "proto3";

package rocketcycle.examples.rpg.concerns;
option go_package = "github.com/lachlanorr/rocketcycle/examples/rpg/concerns";

import "rkcy/extensions.proto";

message Character {
    option (rkcy.is_concern) = true;

    string id = 1;
    string player_id = 2;
    string fullname = 3;
    bool active = 4;

    Currency currency = 5;

    repeated Item items = 6;

    message Currency {
        int32 gold = 1;
        int32 faction_0 = 2;
        int32 faction_1 = 3;
        int32 faction_2 = 4;
    }

    message Item {
        string id = 1;
        string description = 2;
    }
}

message FundingRequest {
    string character_id = 1;
    Character.Currency currency = 2;
}

service CharacterCommands {
    rpc Fund(FundingRequest) returns (Character);
    rpc DebitFunds(FundingRequest) returns (Character);
    rpc CreditFunds(FundingRequest) returns (Character);
}
